# langgraph-forge

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  VERSIONING.md  cliff.toml  pyproject.toml
.claude/agents/: e2e-runner.md
.claude/rules/: git-workflow.md  planning-discipline.md  unit-testing.md
.claude/skills/contract-first/: SKILL.md
.claude/skills/e2e-cost/: SKILL.md
.claude/skills/e2e-debug/: skill.md
.claude/skills/security-review/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug.yml  feature.yml  provider_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/contributing/: README.md  repository-tour.md  testing.md
docs/contributing/decisions/: 0000-template.md  0001-trunk-based-branching.md  0002-deployment-adapter-protocol-shape.md  0003-no-changelog-md-in-repo.md  0004-diataxis-doc-structure.md  0005-docs-stay-in-monorepo-deploy-deferred.md  0006-five-multi-agent-architectures.md  README.md
docs/explanation/: README.md  initialization-boundary.md  multi-agent-architectures.md
docs/governance/: README.md  triage-playbook.md
docs/how-to/: README.md  compose-into-baseline-flow.md  resume-after-interrupt.md
docs/reference/: README.md  cli.md
docs/tutorials/: README.md
example/finance/: README.md
example/finance/from-scratch/: graph.patch  tools.py
example/finance/integrate-into-existing/: finance_agent.py
src/langgraph_forge/: __init__.py
src/langgraph_forge/builders/: checkpoint.py  llm.py  mcp.py  runtime.py  single.py  supervisor.py
src/langgraph_forge/builders/multiagent/: _common.py  custom.py  hierarchical.py  router.py  supervisor.py  swarm.py
src/langgraph_forge/core/: errors.py  reducers.py  specs.py  state.py
src/langgraph_forge/deploy/: __init__.py  azure.py  base.py  bedrock.py  direct.py  registry.py  vertex.py
src/langgraph_forge/scaffold/: cli.py  render.py
src/langgraph_forge/scaffold/templates/base/: .gitignore  README.md.j2  pyproject.toml.j2
src/langgraph_forge/scaffold/templates/base/src/{{ package_name }}/: __init__.py.j2  main.py.j2
src/langgraph_forge/scaffold/templates/base/tests/unit/: test_graph.py.j2
src/langgraph_forge/scaffold/templates/deploy_fragments/azure/src/{{ package_name }}/: deploy.py.j2
src/langgraph_forge/scaffold/templates/deploy_fragments/bedrock/src/{{ package_name }}/: deploy.py.j2
src/langgraph_forge/scaffold/templates/deploy_fragments/direct/src/{{ package_name }}/: deploy.py.j2
src/langgraph_forge/scaffold/templates/deploy_fragments/vertex/src/{{ package_name }}/: deploy.py.j2
src/langgraph_forge/scaffold/templates/patterns/custom/src/{{ package_name }}/: graph.py.j2  specialists.py.j2
src/langgraph_forge/scaffold/templates/patterns/hierarchical/src/{{ package_name }}/: graph.py.j2  specialists.py.j2
src/langgraph_forge/scaffold/templates/patterns/router/src/{{ package_name }}/: graph.py.j2  specialists.py.j2
src/langgraph_forge/scaffold/templates/patterns/single/src/{{ package_name }}/: graph.py.j2
src/langgraph_forge/scaffold/templates/patterns/supervisor/src/{{ package_name }}/: graph.py.j2  specialists.py.j2
src/langgraph_forge/scaffold/templates/patterns/swarm/src/{{ package_name }}/: graph.py.j2  specialists.py.j2
src/langgraph_forge/scaffold/templates/providers/anthropic/: .env.example  .env.example.j2
src/langgraph_forge/scaffold/templates/providers/anthropic/src/{{ package_name }}/: providers.py.j2
src/langgraph_forge/scaffold/templates/providers/azure/: .env.example  .env.example.j2
src/langgraph_forge/scaffold/templates/providers/azure/src/{{ package_name }}/: providers.py.j2
src/langgraph_forge/scaffold/templates/providers/bedrock/: .env.example  .env.example.j2
src/langgraph_forge/scaffold/templates/providers/bedrock/src/{{ package_name }}/: providers.py.j2
src/langgraph_forge/scaffold/templates/providers/google/: .env.example  .env.example.j2
src/langgraph_forge/scaffold/templates/providers/google/src/{{ package_name }}/: providers.py.j2
src/langgraph_forge/scaffold/templates/providers/grok/: .env.example  .env.example.j2
src/langgraph_forge/scaffold/templates/providers/grok/src/{{ package_name }}/: providers.py.j2
src/langgraph_forge/scaffold/templates/providers/openai/: .env.example  .env.example.j2
src/langgraph_forge/scaffold/templates/providers/openai/src/{{ package_name }}/: providers.py.j2
tests/integration/: test_init_and_run.py
tests/unit/: test_public_api.py
tests/unit/builders/: test_checkpoint.py  test_llm.py  test_mcp.py  test_runtime.py  test_single.py  test_supervisor.py
tests/unit/builders/multiagent/: conftest.py  test_common.py  test_custom.py  test_hierarchical.py  test_router.py  test_supervisor.py  test_swarm.py
tests/unit/core/: test_errors.py  test_reducers.py  test_specs_mcp.py  test_specs_model.py  test_specs_multi.py  test_specs_router.py  test_specs_specialist.py  test_specs_team.py  test_specs_thread.py  test_state.py  test_state_router.py  test_state_swarm.py
tests/unit/deploy/: test_base.py  test_cloud_stubs.py  test_direct.py  test_registry.py
tests/unit/scaffold/: test_cli.py  test_render.py
