[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "langgraph-forge"
description = "Initialise LangGraph-based agent architectures: pick a provider, a pattern, a deployment — get a runnable project."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "langgraph-forge contributors" }]
keywords = [
  "langgraph",
  "langchain",
  "agents",
  "multi-agent",
  "supervisor",
  "mcp",
  "llm",
  "scaffold",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
  "langgraph>=0.2.50",
  "langgraph-supervisor>=0.0.13",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-mcp-adapters>=0.1",
  "pydantic>=2.7",
  "typer>=0.12",
  "jinja2>=3.1",
  "questionary>=2.0",
]

[project.optional-dependencies]
bedrock = [
  "boto3>=1.35",
  "bedrock-agentcore>=0.1",
]
vertex = [
  "google-cloud-aiplatform>=1.60",
]
azure = [
  "azure-ai-agents>=1.0",
]
sqlite = [
  "langgraph-checkpoint-sqlite>=2.0",
]
postgres = [
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg[binary]>=3.2",
]
all = [
  "langgraph-forge[bedrock,vertex,azure,sqlite,postgres]",
]

# PEP 735 dependency groups -- consumed by `uv sync --dev` (default) and
# every modern dependency manager. Kept separate from
# [project.optional-dependencies] so dev tooling does NOT leak into the
# published package metadata: `pip install langgraph-forge[dev]` is no
# longer a thing, which is correct -- end users have no business
# pulling ruff / pyright / pytest into their environment.
[dependency-groups]
dev = [
  "ruff>=0.6.9",
  "pyright>=1.1.380",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pre-commit>=3.8",
  "build>=1.2",
  "twine>=5.1",
  "git-cliff>=2.5",
]

[project.urls]
Homepage = "https://github.com/jieyao-MilestoneHub/langgraph-forge"
Documentation = "https://github.com/jieyao-MilestoneHub/langgraph-forge/tree/main/docs"
Repository = "https://github.com/jieyao-MilestoneHub/langgraph-forge"
Issues = "https://github.com/jieyao-MilestoneHub/langgraph-forge/issues"
Changelog = "https://github.com/jieyao-MilestoneHub/langgraph-forge/releases"

[project.scripts]
langgraph-forge = "langgraph_forge.scaffold.cli:app"

[project.entry-points."langgraph_forge.deployment_adapters"]
direct = "langgraph_forge.deploy.direct:DirectAdapter"
bedrock = "langgraph_forge.deploy.bedrock:BedrockAgentCoreAdapter"
vertex = "langgraph_forge.deploy.vertex:VertexAgentEngineAdapter"
azure = "langgraph_forge.deploy.azure:AzureAIAgentAdapter"

# ---------------------------------------------------------------------------
# Hatchling build configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "src/langgraph_forge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_forge"]
# Hatchling includes every file under the package root by default, so
# py.typed and the Jinja2 templates under scaffold/templates/ end up
# inside the wheel automatically; no explicit include is needed.

[tool.hatch.build.targets.sdist]
include = [
  "src/langgraph_forge",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "CHANGELOG.md",
]

# ---------------------------------------------------------------------------
# Ruff (formatter + linter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
  "src/langgraph_forge/scaffold/templates",  # Jinja2 templates: not valid Python
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "PL",  # pylint (subset)
  "RUF", # ruff-specific
  "TID", # flake8-tidy-imports
]
ignore = [
  "E501",    # line length — handled by formatter
  "PLR0913", # too many arguments — factories legitimately take many kwargs
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]  # magic values in tests are fine
# Lazy imports are the design intent of this module; PLC0415 enforced
# elsewhere still trips review.
"src/langgraph_forge/builders/checkpoint.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_forge"]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests"]
exclude = [
  "**/__pycache__",
  "src/langgraph_forge/scaffold/templates",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: end-to-end tests that may hit real services (opt-in via -m integration)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["src/langgraph_forge"]
branch = true

[tool.coverage.report]
skip_empty = true
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
